Minor updates to README. Delete out of date comment from CreateServer.

--- a/database-wiki/README
+++ b/database-wiki/README
@@ -1,6 +1,13 @@
 Database Wiki
 =============
 
+A wiki lets users collaborate on Web content easily through a Web
+browser, and wikis also make it easier to understand the process by
+which some data was created by recording detailed history records. A
+Database Wiki is a wiki for structured data, providing both
+database-like capabilities to structure and query data and wiki-like
+capabilities for collaboration and transparency.
+
 Entry points
 ============
 
@@ -9,6 +16,8 @@ org.dbwiki.main:
 
   CreateServer
   DatabaseImport
+  DatabasePackageExport
+  DatabasePackageImport
   DropDatabaseWiki
   DropServer
   ImportPresentationFiles
@@ -35,12 +44,12 @@ Scripts:
 
 This creates the following tables in the relational database:
 
-  wiki_config_files
-  wiki_server_database
-  wiki_server_user
+  _database
+  _presentation
+  _user
   
-The first argument is a server configuration file.  The second
-argument is a user configuration file.
+The first argument is a server configuration file. The second argument
+is a user configuration file.
 
 Example files are currently in:
 
@@ -60,7 +69,7 @@ Starting a server
 
 Java class:
 
-  StartServer <config-file> 
+  StartServer <config-file>
 
 Scripts:
 
@@ -77,16 +86,21 @@ Importing XML data into a new database wiki
 
 Java class:
 
-  DatabaseImport <config-file> <name> <title> <xml-file> <user>
+  DatabaseImport <config-file> <name> <title> <path> <xml-file> <user>
 
 Scripts:
 
-  database-import.sh  <name> <title> <xml-file> <user>
-  database-import.cmd <name> <title> <xml-file> <user>
+  database-import.sh  <name> <title> <path> <xml-file> <user>
+  database-import.cmd <name> <title> <path> <xml-file> <user>
 
 The <name> is a short name for the database.
 
 The <title> is a descriptive name for the database.
+
+The <path> is the path from the root to the data entries
+(e.g. if the XML file is of the form
+  <things><item>...</item>...<item>...</item></things>
+then a suitable path would be '/things').
 
 The <user> is the name of the user to use to record the import.
 
@@ -102,7 +116,7 @@ Script:
   import-presentation-files.sh  <db-name> <path> <user>
   import-presentation-files.cmd <db-name> <path> <user>
 
-The <path> is the path to the presentation files. The files should be named:
+The <path> is the file path to the presentation files. The files should be named:
 
   <path> + <db-name> + ".css"
   <path> + <db-name> + ".layout"
@@ -141,3 +155,5 @@ answer yes to the question, then the all the database wiki data will
 also be deleted.
 
 
+
+TODO: describe DatabasePackageExport and DatabasePackageImport
